@@ -2,8 +2,9 @@
 # SPDX-License-Identifier: 0BSD OR ISC
 
 Checks: >
+  -concurrency-mt-unsafe,
   -cppcoreguidelines-avoid-non-const-global-variables,
 CheckOptions:
   - key:   readability-function-cognitive-complexity.Threshold
-    value: '44'
+    value: '46'
 InheritParentConfig: true
