@@ -70,16 +70,41 @@ if host_machine.system() != 'windows'
 int main(void) { struct timespec t; return clock_gettime(CLOCK_MONOTONIC, &t); }
 '''
 
-  if cc.compiles(
+  nanosleep_code = '''#include <time.h>
+int main(void) { const struct timespec t = {0, 100000}; nanosleep(&t, NULL); }
+'''
+
+  sched_setscheduler_code = '''#include <sched.h>
+int main(void) {
+  struct sched_param sp;
+  sp.sched_priority = 99;
+  return sched_setscheduler(0, SCHED_FIFO, &sp);
+}'''
+
+  has_clock_gettime = cc.compiles(
     clock_gettime_code,
     args: platform_defines,
     dependencies: [rt_dep],
     name: 'clock_gettime',
   )
+
+  has_nanosleep = cc.compiles(
+    nanosleep_code,
+    args: platform_defines,
+    name: 'nanosleep',
+  )
+
+  has_sched_setscheduler = cc.compiles(
+    sched_setscheduler_code,
+    args: platform_defines,
+    name: 'sched_setscheduler',
+  )
+
+  if has_clock_gettime and has_nanosleep and has_sched_setscheduler
     lv2bench = executable(
       'lv2bench',
       files('lv2bench.c'),
-      c_args: c_suppressions,
+      c_args: c_suppressions + platform_defines,
       dependencies: [lilv_dep, rt_dep, sndfile_dep],
       implicit_include_directories: false,
       install: true,
