@@ -6,8 +6,9 @@ lilv (0.26.1) unstable; urgency=medium
   * Fix crash when duplicate plugins are discovered
   * Fix lilv_node_is_literal() with booleans
   * Refine command line tool interfaces and documentation
+  * lv2bench: Use more realistic real-time scheduling
 
- -- David Robillard <d@drobilla.net>  Tue, 25 Nov 2025 02:16:28 +0000
+ -- David Robillard <d@drobilla.net>  Tue, 25 Nov 2025 15:55:49 +0000
 
 lilv (0.26.0) stable; urgency=medium
 
